# vmux

./: .gitignore  Cargo.toml  README.md
.context/goals/: vmux-vertical-tabs.md
.context/plans/: init.md  vmux-split-view-polish.md
src/: lib.rs  main.rs  notify.rs  recent_activity.rs  state.rs  tmux.rs  ui.rs
tests/: chooser_pty.rs  notify_cli.rs  recent_activity_system.rs  state.rs  tmux_adapter.rs
