[package]
name = "vmux"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
expectrl = "0.7"
tempfile = "3"

[lib]
name = "vmux"
path = "src/lib.rs"

[[bin]]
name = "vmux"
path = "src/main.rs"

# Keep debug builds usable while optimizing the hot path enough for a smooth
# interactive TUI experience.
[profile.dev]
opt-level = 1
debug = 1
incremental = true
codegen-units = 16

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.vmux]
opt-level = 2

[profile.dev.package.ratatui]
opt-level = 3

[profile.dev.package.crossterm]
opt-level = 3

[profile.dev.package.portable-pty]
opt-level = 3

[profile.dev.package.vt100]
opt-level = 3
